# le-martin-hotel

./: .gitignore  DRAFT RESTAURANT VERSION US.docx  DRAFT RESTAURANTS  VERSION FR.docx  ESCALE MAIL .docx  GUIDE-OUTLOOK-EMMANUEL.html  MODELE ANNULATION.docx  Welcome board.docx  email-emmanuel-facture.html  facture-acompte-martin.html  presentation-bdd-emmanuel.md  presentation-resultats-emmanuel.html  saint-martin-concierge-knowledge-base.md  thais-openapi.yml  thais-webhook.md
ai-concierge/: .env.example  .gitignore  ROADMAP.md  audit_db.py  cleanup_full.py  cleanup_restaurants.py  cleanup_supabase.py  fix_rooms.py  processed_ids_2026-03-03.txt  pyproject.toml  rapport_observation_2026-03-03.md  send_recap.py  simulate_email.py
ai-concierge/scripts/: simulate_email.py
ai-concierge/src/: config.py  exceptions.py  main.py
ai-concierge/src/api/: health.py  stats.py  webhooks.py
ai-concierge/src/models/: ai.py  client.py  conversation.py  daily_summary.py  enums.py  knowledge.py  message.py  reservation.py
ai-concierge/src/prompts/: few_shot.py  system.py
ai-concierge/src/services/: ai_engine.py  thais.py  (+8 more)
ai-concierge/tests/: AUDIT_CRITIQUE_REPONSES.md  RAPPORT_TESTS_PIPELINE.md  all_threads.json  conftest.py  real_conversations.json  real_emails.json  test_01_language.py  test_02_escalation.py  test_03_confidence.py  test_04_email_parsing.py  test_05_tools.py  test_06_few_shot.py  test_07_system_prompt.py  test_08_cost_tracker.py  test_09_pipeline_simulation.py  test_10_webhooks.py  test_11_real_api.py  test_12_logic_routes.py  test_real.py  test_scenarios.py
(+18 files in other folders)
